Search activity done
Sucessfully added search activity into project

--- a/DriveToTravel/app/src/main/res/layout/activity_register.xml
+++ b/DriveToTravel/app/src/main/res/layout/activity_register.xml
@@ -110,10 +110,11 @@
                 <RadioButton
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Passenger"
+                    android:text="Passanger"
                     android:id="@+id/radioButtonRegisterActivityPassenger"
                     android:layout_alignTop="@+id/radioButtonRegisterActivityDriver"
-                    android:layout_toEndOf="@+id/radioButtonRegisterActivityDriver" />
+                    android:layout_toEndOf="@+id/radioButtonRegisterActivityDriver"
+                    android:checked="false" />
             </RadioGroup>
 
         </RelativeLayout>
