--- a/DriveToTravel/app/src/main/res/layout/activity_login.xml
+++ b/DriveToTravel/app/src/main/res/layout/activity_login.xml
@@ -52,6 +52,15 @@
         android:layout_height="wrap_content"
         android:text="@string/registerLabel"
         android:id="@+id/registerLabel"
+        android:layout_below="@+id/testUser_button"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="27dp" />
+
+    <Button
+        android:layout_width="150dp"
+        android:layout_height="wrap_content"
+        android:text="Test user"
+        android:id="@+id/testUser_button"
         android:layout_below="@+id/loginBtn"
         android:layout_centerHorizontal="true" />
 </RelativeLayout>
