Add tour first steps

--- a/DriveToTravel/app/src/main/res/layout/content_drivers_main.xml
+++ b/DriveToTravel/app/src/main/res/layout/content_drivers_main.xml
@@ -12,4 +12,9 @@
     tools:context="rs.elfak.mosis.drivetotravel.drivetotravel1.Activities.DriversMainActivity"
     tools:showIn="@layout/activity_drivers_main">
 
+    <ListView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/tourListDriver"
+        android:layout_centerHorizontal="true" />
 </RelativeLayout>
