--- a/DriveToTravel/app/src/main/res/layout/custom_info_window_layout.xml
+++ b/DriveToTravel/app/src/main/res/layout/custom_info_window_layout.xml
@@ -1,18 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="120dp">
 
-    <ImageView
-        android:layout_width="80dp"
-        android:layout_height="100dp"
-        android:id="@+id/infowindow_acc_image"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="5dp"
-        android:layout_marginLeft="5dp"
-        android:src="@color/colorPrimary"
-        android:layout_alignBottom="@+id/infowindow_phone" />
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical" android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:weightSum="1">
 
     <TextView
         android:layout_width="wrap_content"
@@ -21,9 +12,19 @@
         android:text="Username"
         android:id="@+id/infowindow_username"
         android:layout_alignParentTop="true"
-        android:layout_toEndOf="@+id/infowindow_acc_image"
-        android:layout_marginTop="5dp"
-        android:layout_marginLeft="10dp" />
+        android:layout_alignStart="@+id/infowindow_acc_image"
+        android:layout_marginTop="5dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Name:"
+        android:id="@+id/textView12"
+        android:layout_marginTop="18dp"
+        android:layout_marginStart="21dp"
+        android:layout_below="@+id/infowindow_username"
+        android:layout_toEndOf="@+id/infowindow_username" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -31,19 +32,17 @@
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="First and last name"
         android:id="@+id/infowindow_name"
-        android:layout_below="@+id/infowindow_username"
-        android:layout_alignStart="@+id/infowindow_username"
-        android:layout_marginTop="5dp" />
+        android:layout_above="@+id/textView14"
+        android:layout_toEndOf="@+id/textView14" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Account type"
-        android:id="@+id/infowindow_account"
-        android:layout_below="@+id/infowindow_name"
-        android:layout_alignStart="@+id/infowindow_name"
-        android:layout_marginTop="5dp" />
+        android:text="Phone:"
+        android:id="@+id/textView14"
+        android:layout_below="@+id/textView12"
+        android:layout_alignStart="@+id/textView12" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -51,8 +50,34 @@
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="Phone number"
         android:id="@+id/infowindow_phone"
-        android:layout_below="@+id/infowindow_account"
-        android:layout_alignStart="@+id/infowindow_account"
-        android:layout_marginTop="5dp" />
+        android:layout_below="@+id/infowindow_name"
+        android:layout_alignStart="@+id/infowindow_name" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="User:"
+        android:id="@+id/textView13"
+        android:layout_below="@+id/textView14"
+        android:layout_alignStart="@+id/textView14" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Account type"
+        android:id="@+id/infowindow_account"
+        android:layout_below="@+id/infowindow_phone"
+        android:layout_alignStart="@+id/infowindow_phone" />
+
+    <ImageView
+        android:layout_width="80dp"
+        android:layout_height="110dp"
+        android:id="@+id/infowindow_acc_image"
+        android:src="@color/colorPrimary"
+        android:layout_marginLeft="5dp"
+        android:layout_below="@+id/infowindow_username"
+        android:layout_alignParentStart="true" />
 
 </RelativeLayout>
