--- a/DriveToTravel/app/src/main/res/layout/activity_show_tour_details.xml
+++ b/DriveToTravel/app/src/main/res/layout/activity_show_tour_details.xml
@@ -112,17 +112,36 @@
         android:text="Show on map"
         android:id="@+id/tour_details_show_on_map_btn"
         android:layout_marginLeft="22dp"
-        android:layout_alignTop="@+id/button2"
-        android:layout_toStartOf="@+id/button2" />
+        android:layout_marginTop="157dp"
+        android:layout_marginEnd="45dp"
+        android:layout_below="@+id/tour_details_driver_name_text"
+        android:layout_alignParentEnd="true" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Attend on ride"
-        android:id="@+id/button2"
-        android:layout_marginStart="37dp"
-        android:layout_marginTop="30dp"
+        android:id="@+id/tour_details_attend_btn"
+        android:layout_marginLeft="31dp"
+        android:layout_alignTop="@+id/tour_details_show_on_map_btn"
+        android:layout_alignEnd="@+id/tour_details_driver_name_text" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Driver rank:"
+        android:id="@+id/textView"
+        android:layout_below="@+id/textView11"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="/"
+        android:id="@+id/tour_details_driver_rank"
         android:layout_below="@+id/tour_details_driver_name_text"
-        android:layout_toEndOf="@+id/tour_details_driver_name_text" />
+        android:layout_alignStart="@+id/tour_details_driver_name_text" />
 
 </RelativeLayout>
