--- a/DriveToTravel/app/src/main/res/layout/activity_login.xml
+++ b/DriveToTravel/app/src/main/res/layout/activity_login.xml
@@ -71,7 +71,8 @@
         android:text="Test passenger"
         android:id="@+id/testUser_button"
         android:layout_below="@+id/loginBtn"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:visibility="invisible" />
 
     <Button
         android:layout_width="150dp"
@@ -79,6 +80,7 @@
         android:text="Test driver"
         android:id="@+id/testDriver_button"
         android:layout_centerHorizontal="true"
-        android:layout_below="@+id/testUser_button" />
+        android:layout_below="@+id/testUser_button"
+        android:visibility="invisible" />
 
 </RelativeLayout>
