--- a/DriveToTravel/app/src/main/res/layout/activity_login.xml
+++ b/DriveToTravel/app/src/main/res/layout/activity_login.xml
@@ -72,7 +72,7 @@
         android:id="@+id/testUser_button"
         android:layout_below="@+id/loginBtn"
         android:layout_centerHorizontal="true"
-        android:visibility="invisible" />
+        android:visibility="visible" />
 
     <Button
         android:layout_width="150dp"
@@ -81,6 +81,6 @@
         android:id="@+id/testDriver_button"
         android:layout_centerHorizontal="true"
         android:layout_below="@+id/testUser_button"
-        android:visibility="invisible" />
+        android:visibility="visible" />
 
 </RelativeLayout>
